# classify

./: .cursorrules  .env  .env.example  README.md  debug_azure_connections.py  debug_env_check.py  export_mapper.py  main.py  mapper.txt  params.json  pyproject.toml  stories.txt
.github/: copilot-instructions.md
mapper_api/api/: api.py  errors.py
mapper_api/api/routers/: __init__.py  evaluator.py  fivews_mapper.py  health.py  taxonomy_mapper.py
mapper_api/application/: __init__.py
mapper_api/application/dto/: __init__.py  domain_evaluation.py  domain_mapping.py  evaluation_requests.py  evaluation_responses.py  http_common.py  http_evaluation.py  http_evaluation_requests.py  http_responses.py  output_schemas.py  requests.py  use_case_requests.py
mapper_api/application/mappers/: __init__.py  assemblers.py
mapper_api/application/ports/: __init__.py  llm.py
mapper_api/application/prompts/: __init__.py  fivews.py  (+1 more)
mapper_api/config/: __init__.py  scoring_config.py  settings.py
mapper_api/domain/: __init__.py  errors.py
mapper_api/infrastructure/: __init__.py
mapper_api/interface/: __init__.py
mapper_api/mock/: __init__.py  definitions_repo.py  ground_truth_repo.py  llm_client.py
mapper_api/web/: __init__.py  api.py
tests/: __init__.py
tests/integration/: __init__.py  smoke_requests.py  test_blob_repo_live.py  test_end_to_end.py  test_routers.py
tests/unit/: __init__.py  test_application_assemblers.py  test_application_schemas.py  test_domain_entities.py  test_domain_errors.py  test_domain_value_objects.py  test_prompts.py  test_use_cases.py
(+55 files in other folders)
