[project]
name = "mapper-api"
version = "0.1.0"
description = "Mapper API (Clean Architecture, FastAPI, Azure OpenAI + Blob)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Team"}]

[project.dependencies]
fastapi = "*"
"uvicorn[standard]" = "*"
pydantic = ">=2.0"
"pydantic-settings" = "*"
openai = ">=1.40"
azure-identity = "*"
azure-storage-blob = "*"
httpx = "*"
tenacity = "*"
langdetect = "*"
